[gd_scene load_steps=23 format=2]

[ext_resource path="res://Sprites/Enemies/Snake.png" type="Texture" id=1]
[ext_resource path="res://Hitboxes and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/Snake.gd" type="Script" id=3]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/Enemies/PlayerDetection.tscn" type="PackedScene" id=5]
[ext_resource path="res://Hitboxes and Hurtboxes/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Hitboxes and Hurtboxes/SoftCollision.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sprites/Enemies/WanderController.tscn" type="PackedScene" id=8]
[ext_resource path="res://Hitboxes and Hurtboxes/White.shader" type="Shader" id=9]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 9 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 39, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 39, 0, 39, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 78, 0, 39, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 117, 0, 39, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Slither",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
radius = 1.49457
height = 27.3063

[sub_resource type="CapsuleShape2D" id=8]
radius = 6.78385
height = 22.3456

[sub_resource type="CircleShape2D" id=9]
radius = 100.907

[sub_resource type="CapsuleShape2D" id=10]
radius = 3.42203
height = 24.3079

[sub_resource type="CapsuleShape2D" id=11]
radius = 3.71824

[sub_resource type="Animation" id=12]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=13]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Snake" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0.148651, -8.02715 )
frames = SubResource( 6 )
animation = "Slither"
frame = 2
speed_scale = 1.5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.602993, -2.91043 )
rotation = -1.5708
shape = SubResource( 7 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 2147483656

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -0.222977, -6.46564 )
rotation = -1.5708
shape = SubResource( 8 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 3

[node name="PlayerDetection" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
modulate = Color( 1, 1, 1, 0.388235 )
shape = SubResource( 9 )

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -6.31385 )
rotation = 1.5708
shape = SubResource( 10 )

[node name="SoftCollision" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, -3.78403 )

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
rotation = 1.5708
shape = SubResource( 11 )

[node name="WanderController" parent="." instance=ExtResource( 8 )]

[node name="BlinkAnimation" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 12 )
anims/Stop = SubResource( 13 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="PlayerDetection"]

[editable path="Hitbox"]

[editable path="SoftCollision"]
